	  a kernel (only) with full process support and will execute programs
	  only from a file system.  This new configuration is defined but only
	  partially integrated (2014-8-29).
	* tools/refresh.sh: Add a tool to make refreshing configurations easier
	  when you wnat to do a lot of them (2014-8-29).
	* tools/mksyscall.c: Build syscalls that do not need header files (there
	  are none, however) (2014-8-30).
	* include/nuttx/errno.h syscall/syscall.csv and syscall_funclookup.c:
	  Yet more issues with errno access via syscalls fixed (2014-8-30).
	* Makefile.unix, Makefile.win, Directories.mk, FlatLibs.mk, ProtectedLibs.mk,
	  and KernelLibs.mk:  Separate the common directory selection logic
	  into Directories.mk; add support for kernel build.  Move library
	  selection logic in common *.mk files, one each for flat-, protected-,
	  and kernel- mode builds (2014-8-30).
	* include/nuttx/syscall.h syscall/syscall.csv: clock_systimer needs the
	  same fix as for get/set_errno when used with system calls (2014-8-30).
	* sched/Kconfig sched/init/os_bringup.c tools/cfgdefine.c: Add
	  configuration options to start the system from a program on a file
	  system (2014-8-30).
	* mm/ and include/nuttx/mm.h: Remove CONFIG_MM_MULTIHEAP.  Non-multiheap
	  operation is no longer supported (2014-8-31).
	* configs/sama5d4-ek/kernel: Add a configuration for testing the
	  kernel build configuration (still a work in progress) (2014-8-31).
	* include/nuttx/arch.h, kmalloc.h, mm.h, sched/init/os_start.c,
	  sched/sched_free.c, and arch/arm/src/sama5/sam_allocateheap.c: Clean
	  up some kernel build heap allocation issues.  The Cortex-A kernel
	  build now compiles without errors (but cannot link until brk() and
	  sbrk() are implemented) (2014-8-31).
	* mm/*mm_brkaddr.c, *mm_extend.c, Makefile, and include/nuttx/mm.h: Add
	  low-level memory management hooks that will be needed to support brk()
	  and sbrk() (2014-8-31).