@@ -8332,3 +8332,5 @@
 	* mm/*mm_brkaddr.c, *mm_extend.c, Makefile, and include/nuttx/mm.h: Add
 	  low-level memory management hooks that will be needed to support brk()
 	  and sbrk() (2014-8-31).
+	* Rename krealloc(0 to kmm_realloc() and kmemalign to kmm_memalign() for
+	  consistency with the rest of the naming conventions (2014-8-31).
